--- a/Index.html
+++ b/Index.html
@@ -4,25 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>❤️ Mahesh Joshi ❤️</title>
-  <link rel="stylesheet" type="text/css" href="css-Style/Style.css">
-  <link rel="icon" href="Image/Mahesh.ico">
+  <link rel="stylesheet" type="text/css" href="/css-Style/Style.css">
+  <link rel="icon" href="/Image/Mahesh.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
 <body>
   <div class="Top-Container">
-    <img class="top-cloud" src=Image/cloud.png alt="Cloud-Img">
+    <img class="top-cloud" src=/Image/cloud.png alt="Cloud-Img">
     <div class="title-text">
       <h1>I'm Mahesh Joshi.</h1>
       <h2>a <span class="pro">pro</span>grammer N Trainer.</h2>
     </div>
-    <img class="bottom-cloud" src=Image/cloud.png alt="Cloud-Img">
-    <img class="Mountain" src=Image/Mountain.png alt="Mountain-Img">
+    <img class="bottom-cloud" src=/Image/cloud.png alt="Cloud-Img">
+    <img class="Mountain" src=/Image/Mountain.png alt="Mountain-Img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="Image/Mahesh.png" alt="Mahesh-png" width="170">
+      <img src="/Image/Mahesh.png" alt="Mahesh-png" width="170">
       <h2>Hello.</h2>
       <p class = "intro"> I am a Programmer has 18+ Years of Experience in IT Field N also has in Interest in Imparting Knowledge to the World.</p>
     </div>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="skill-row">
-        <img class="potter-img" src="Image/HarryPotter.jpg" alt="Harry Potter" width="175">
+        <img class="potter-img" src="/Image/HarryPotter.jpg" alt="Harry Potter" width="175">
         <h3>Hobbies</h3>
         <p>Reading Thriller (Lord of the Rings, Potter), Puzzle Solving</p>
       </div>
